feat(patient_groups): handler for GET patients by org is working
